--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
-  <h1>Uh oh!</h1>
+  <h1>Uh oh! Smile doesn't have it. Lost? 🫣</h1>
   <div class="link">
     <img class="selfie" alt="{{ site.title }}" src="{{ site.url }}/assets/images/error.gif" />
   </div>
   <br />
   <br />
-  <a href="/">Take me home!</a>
+  <a href="/blog">Take me home!</a>
 </section>
