--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@ permalink: /404.html
 <section class="lost-container">
   <h1>Uh oh! Smile doesn't have it. Lost? 🫣</h1>
   <div class="link">
-    <img class="selfie" alt="{{ site.title }}" src="{{ site.url }}/assets/images/error.gif" />
+    <img class="selfie" alt="{{ site.title }}" src="{{ site.baseurl }}/assets/images/error.gif" />
   </div>
   <br />
   <br />
-  <a href="/blog">Take me home!</a>
+  <a href="{{ site.baseurl }}">Take me home!</a>
 </section>
